[project]
name = "libreview"
version = "0.1.0"
authors = [
  { name="Svagtlys", email="45446348+Svagtlys@users.noreply.github.com" },
]
description = "A python wrapper for the LibreLinkUp API, with additional helper functions for interpreting CGM data"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "aiohttp >= 3.8.6, < 4",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Svagtlys/libreview"
Issues = "https://github.com/Svagtlys/libreview/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"